fixed the vegetable missing page to  the html website folder

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
               </div>
               <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="Aboutuspage.html">About</a></li>
+                  <li><a href="html websites/Aboutuspage.html">About</a></li>
                   <li class="dropdown">
                       <a class="dropbtn">Products</a>
                       <div class="dropdown-content">
-                          <a href="dairy.html">Dairy Products</a>
-                          <a href="vegetables.html">Vegetables</a>
+                          <a href="html websites/dairy.html">Dairy Products</a>
+                          <a href="html websites/">Vegetables</a>
                           <a href="fruits.html">Fresh Fruits</a>
                           <a href="Meat.html">Meat / Seafood</a>
                           <a href="Ingredients.html">Ingredients</a>
