--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                       <a class="dropbtn">Products</a>
                       <div class="dropdown-content">
                           <a href="html websites/dairy.html">Dairy Products</a>
-                          <a href="html websites/">Vegetables</a>
-                          <a href="fruits.html">Fresh Fruits</a>
-                          <a href="Meat.html">Meat / Seafood</a>
-                          <a href="Ingredients.html">Ingredients</a>
+                          <a href="html websites/vegetables.html">Vegetables</a>
+                          <a href="html websites/fruits.html">Fresh Fruits</a>
+                          <a href="html websites/Meat.html">Meat / Seafood</a>
+                          <a href="html websites/Ingredients.html">Ingredients</a>
                       </div>
                   </li>
-                  <li><a href="Orderpage.html">Order</a></li>
-                  <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
+                  <li><a href="html websites/Orderpage.html">Order</a></li>
+                  <li><a href="html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
               </ul>
               <div class="nav-buttons">
-                <a href="cart1.html" class="button-nav">Cart</a>
-                <a href="fav.html" class="button-nav">Favorite</a>
+                <a href="html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="html websites/fav.html" class="button-nav">Favorite</a>
             </div>
           </div>
       </nav>
@@ -49,7 +49,7 @@
           <h2>Welcome To <i>"Grocies"</i></h2>
           <p> We prioritize excellence,making sure that only the best ingredients are available for you and your loved ones to enjoy.</p>
           <div class="button-container">
-            <a href="Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a><!--Button to the signup page -->
+            <a href="html websites/Loyaltyregistration.html" class="button"><i><b>Join Now!</b></i></a><!--Button to the signup page -->
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
         <section id=hb1 class="homebox">
           <h2><u>Dairy Products</u></h2>
           <center>
-            <a href="##" target="_blank">
+            <a href="html websites/dairy.html" target="_blank">
               <img src="image/dairy products.jpeg" alt="Dairy Products">
             </a>
           </center>
