--- a/html websites/Aboutuspage.html
+++ b/html websites/Aboutuspage.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="my website">
-        <title>About Us Page</title>
-        <link rel="stylesheet" href="style/Website.css">
-    </head>
-    <body>
-      <div id="aboutus">
-     <header>
-        <nav class="navbar">
-            <div class="navdiv">
-            <div class="logo">
-                <a href="index.html">
-                <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-            </a>
-        </div>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="Aboutuspage.html">About</a></li>
-              <li class="dropdown">
-                <a class="dropbtn">Products</a>
-                <div class="dropdown-content">
-                    <a href="dairy.html">Dairy Products</a>
-                    <a href="vegetables.html">Vegetables</a>
-                    <a href="SkincareandCosmetics.html">Skincare and Cosmetics</a>
-                    <a href="fruits.html">Fresh Fruits</a>
-                    <a href="Meat.html">Meat / Seafood</a>
-                    <a href="Ingredients.html">Ingredients</a>
-                </div>
-            </li>
-            <li><a href="Orderpage.html">Order</a></li>
-            <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-        </ul>
-        <div class="nav-buttons">
-          <a href="cart1.html" class="button-nav">Cart</a>
-          <a href="fav.html" class="button-nav">Favorite</a>
-      </div>
-    </div>
-</nav>
-</header>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
+</head>
+
+<body>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
   <main>
     <div class="about-hero">
       </div>
@@ -53,7 +55,7 @@
   <section id=first class="branch">
       <h2><u>Gampaha</u></h2>   
       <br>   
-      <center><img src="image/Branch1.webp" alt="Branch 1" width="350" height="350"></center>
+      <center><img src="../image/Branch1.webp" alt="Branch 1" width="350" height="350"></center>
       <br>
       <h5>Address:</h5>
       <p>No. 125, Colombo Road, Gampaha</p> 
@@ -70,7 +72,7 @@
   <section id=second class="branch">
       <h2><u>Kotte</u></h2>   
       <br>   
-      <center><img src="image/Branch2.webp" alt="Branch 2" width="350" height="350"></center>
+      <center><img src="../image/Branch2.webp" alt="Branch 2" width="350" height="350"></center>
       <br>
       <h5>Address:</h5>
       <p>No. 581, Kotte Road , Pitakotte</p> 
@@ -86,7 +88,7 @@
   <section id=third class="branch">
       <h2><u>Chilaw</u></h2>   
       <br>   
-      <center><img src="image/Branch3.webp" alt="Branch 3" width="350" height="350"></center>
+      <center><img src="../image/Branch3.webp" alt="Branch 3" width="350" height="350"></center>
       <br>
       <h5>Address:</h5>
       <p>No. 112, Puttalam road, Chilaw</p> 
