--- a/html websites/Ingredients.html
+++ b/html websites/Ingredients.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="my website">
-    <title>Ingredients</title>
-    <link rel="stylesheet" href="style/Website.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
 </head>
+
 <body>
-    <div class="Ingredients-page">
-        <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                    </ul>
-                    <div class="nav-buttons">
-                        <a href="cart1.html" class="button-nav">Cart</a>
-                        <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
 
         <br><br><br><br><br><br><br><br>
         <h1 id="i2">Ingredients</h1>
@@ -47,62 +50,56 @@
 
         <div class="ing-container">
             <div class="ibox">
-                <img src="image/Baking/Baking Powder.png" alt="Baking Powder">
+                <img src="../image/Baking/Baking Powder.png" alt="Baking Powder">
                 <h2>Baking Powder</h2>
                 <h3>Rs 350.00</h3>
                 <br>
-                <button onclick="addToFav('Baking Powder', 350.00, 'image/Baking/Baking Powder.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="ibox">
-                <img src="image/Baking/Chilli Powder.png" alt="Chilli Powder">
+                <img src="../image/Baking/Chilli Powder.png" alt="Chilli Powder">
                 <h2>Chilli Powder</h2>
                 <h3>Rs 260.00</h3>
                 <br>
-                <button onclick="addToFav('Chilli Powder', 260.00, 'image/Baking/Chilli Powder.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="ibox">
-                <img src="image/Baking/Corn Flour.png" alt="Corn Flour">
+                <img src="../image/Baking/Corn Flour.png" alt="Corn Flour">
                 <h2>Corn Flour</h2>
                 <h3>Rs 135.00</h3>
                 <br>
-                <button onclick="addToFav('Corn Flour', 135.00, 'image/Baking/Corn Flour.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="ibox">
-                <img src="image/Baking/Crystal Salt.png" alt="Crystal Salt">
+                <img src="../image/Baking/Crystal Salt.png" alt="Crystal Salt">
                 <h2>Crystal Salt</h2>
                 <h3>Rs 135.00</h3>
                 <br>
-                <button onclick="addToFav('Crystal Salt', 135.00, 'image/Baking/Crystal Salt.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="ibox">
-                <img src="image/Baking/Essence Vanilla.png" alt="Essence Vanilla">
+                <img src="../image/Baking/Essence Vanilla.png" alt="Essence Vanilla">
                 <h2>Essence Vanilla</h2>
                 <h3>Rs 165.00</h3>
                 <br>
-                <button onclick="addToFav('Essence Vanilla', 165.00, 'image/Baking/Essence Vanilla.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="ibox">
-                <img src="image/Baking/Icing Sugar.png" alt="Icing Sugar">
+                <img src="../image/Baking/Icing Sugar.png" alt="Icing Sugar">
                 <h2>Icing Sugar</h2>
                 <h3>Rs 240.00</h3>
                 <br>
-                <button onclick="addToFav('Icing Sugar', 240.00, 'image/Baking/Icing Sugar.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
@@ -146,5 +143,5 @@
             </div>
         </footer>
     </body>
-    <script src="add-to-cart.js"></script>
+    <script src="../scripts/cart.js"></script>
 </html>
