--- a/html websites/Loyaltyregistration.html
+++ b/html websites/Loyaltyregistration.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="my website">
-        <title>Loyalty Registration</title>
-        <link rel="stylesheet" href="style/Website.css">
-    </head>
-    <body>
-      <div id="loyalty Registration">
-        <header>
-          <nav class="navbar">
-              <div class="navdiv">
-                  <div class="logo">
-                      <a href="index.html">
-                          <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                      </a>
-                  </div>
-                  <ul>
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="Aboutuspage.html">About</a></li>
-                      <li class="dropdown">
-                          <a class="dropbtn">Products</a>
-                          <div class="dropdown-content">
-                              <a href="dairy.html">Dairy Products</a>
-                              <a href="vegetables.html">Vegetables</a>
-                              <a href="fruits.html">Fresh Fruits</a>
-                              <a href="Meat.html">Meat / Seafood</a>
-                              <a href="Ingredients.html">Ingredients</a>
-                          </div>
-                      </li>
-                      <li><a href="Orderpage.html">Order</a></li>
-                      <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                  </ul>
-                  <div class="nav-buttons">
-                    <a href="cart1.html" class="button-nav">Cart</a>
-                    <a href="fav.html" class="button-nav">Favorite</a>
-                </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
+</head>
+
+<body>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
               </div>
-          </nav>
-      </header>
-  </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
 <br>
 <br>
 <br>
@@ -104,7 +106,7 @@
     <div class="loyalty-Container">
       <section id="goldm" class="gold">
         <br>
-        <center><img src="image/Gold Member.webp" alt="Gold Card"></center>
+        <center><img src="../image/Gold Member.webp" alt="Gold Card"></center>
         <h1><u>Gold Membership</u></h1>
         <ul>
           <li>Exclusive Discounts</li>
@@ -116,7 +118,7 @@
       </section>
       <section id="platinumm" class="platinum">
         <br>
-        <center><img src="image/Platinum Member.webp" alt="Platinum Card"></center>
+        <center><img src="../image/Platinum Member.webp" alt="Platinum Card"></center>
         <h1><u>Platinum Membership</u></h1>
         <ul>
           <li>Free Services</li>
@@ -129,7 +131,7 @@
   </div>
   <section id="silverm" class="silver">
       <br>
-        <center><img src="image/Silver Member.jpg" alt="Silver Card"></center>
+        <center><img src="../image/Silver Member.jpg" alt="Silver Card"></center>
         <h1><u>Silver Membership</u></h1>
         <ul>
           <li>Discounts and Promotions</li>
