--- a/html websites/Meat.html
+++ b/html websites/Meat.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="my website">
-    <title>Meat and Seafood Products</title>
-    <link rel="stylesheet" href="style/Website.css">
-    <script src="cart.js" defer></script> <!-- Link your JavaScript file here -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
 </head>
+
 <body>
-    <div class="meatpage">
-        <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                    </ul>
-                    <div class="nav-buttons">
-                        <a href="cart1.html" class="button-nav">Cart</a>
-                        <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
         
         <br><br><br><br><br><br><br><br>
         <h1 id="m2">Meat / Seafood</h1>
@@ -48,45 +50,41 @@
 
         <div class="meat-container">
             <div class="mbox">
-                <img src="image/Meats/skinless chicken 1KG.png" alt="Whole Chicken 1KG" id="wcimg">
+                <img src="../image/Meats/skinless chicken 1KG.png" alt="Whole Chicken 1KG" id="wcimg">
                 <h2 id="wc">Whole Chicken 1KG</h2>
                 <h3 id="wcp">Rs 1,380.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Whole Chicken 1KG', 1380.00, 'image/Meats/skinless chicken 1KG.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="mbox">
-                <img src="image/Meats/Sausages 1KG.png" alt="Sausages 1KG" id="simg">
+                <img src="../image/Meats/Sausages 1KG.png" alt="Sausages 1KG" id="simg">
                 <h2 id="s">Sausages 1KG</h2>
                 <h3 id="sp">Rs 1,100.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Sausages 1KG', 1100.00, 'image/Meats/Sausages 1KG.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="mbox">
-                <img src="image/Meats/Prawns 1KG.png" alt="Prawns 1 KG" id="pimg">
+                <img src="../image/Meats/Prawns 1KG.png" alt="Prawns 1 KG" id="pimg">
                 <h2 id="p">Prawns 1 KG</h2>
                 <h3 id="pp">Rs 1,590.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Prawns 1 KG', 1590.00, 'image/Meats/Prawns 1KG.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="/html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="mbox">
-                <img src="image/Meats/Fish 1KG.png" alt="Fish 1KG" id="fimg">
+                <img src="../image/Meats/Fish 1KG.png" alt="Fish 1KG" id="fimg">
                 <h2 id="f">Fish 1KG</h2>
                 <h3 id="fishp">Rs 1,150.00 / KG</h3>
                 <br>
-                <button onclick="addToFav('Fish 1KG', 1150.00, 'image/Meats/Fish 1KG.png')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
@@ -130,6 +128,6 @@
             </div>
         </footer>
     </div>
-    <script src="add-to-cart.js"></script>
+    <script src="../scripts/cart.js"></script>
 </body>
 </html>
