--- a/html websites/cart1.html
+++ b/html websites/cart1.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="my website">
-    <title>Cart</title>
-    <link rel="stylesheet" href="style/Website.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
 </head>
+
 <body>
-    <div id="login">
-        <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>
-                    </ul>
-                    <div class="nav-buttons">
-                        <a href="cart.html" class="button-nav">Cart</a>
-                        <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </div>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
     <br><br><br>
     <h1 id="ch2">Add To Cart</h1>
     <br>
@@ -143,7 +145,7 @@
         </tfoot>
     </table>
     <br>
-    <a href="Orderpage.html">
+    <a href="../html websites/Orderpage.html">
     <button id="buy_now">Pay Now</button>
     </a>
     <button id="apply-fav">Apply Fav</button>
@@ -179,12 +181,12 @@
                 <div class="footer-section" id="sm">
                     <p>Follow Us on: </p>
                     <br>
-                    <a href="https://www.instagram.com/your_instagram_handle"><img src="image/instagram.png" alt="Instagram Icon"></a>
-                    <a href="https://www.tiktok.com/@your_tiktok_username"><img src="image/tiktok.png" alt="TikTok Icon"></a>
+                    <a href="https://www.instagram.com/your_instagram_handle"><img src="../image/instagram.png" alt="Instagram Icon"></a>
+                    <a href="https://www.tiktok.com/@your_tiktok_username"><img src="../image/tiktok.png" alt="TikTok Icon"></a>
                 </div>
             </div>
         </div>
     </footer>
-    <script  src="cart.js"></script>
+    <script  src="../scripts/cart.js"></script>
 </body>
 </html>
