--- a/html websites/dairy.html
+++ b/html websites/dairy.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="my website">
-    <title>Dairy Products</title>
-    <link rel="stylesheet" href="style/Website.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
 </head>
+
 <body>
-    <div class="dairypage">
-        <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                    </ul>
-                    <div class="nav-buttons">
-                        <a href="cart1.html" class="button-nav">Cart</a>
-                        <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
         <main>
             <div class="dairy-hero">
             </div>
@@ -54,39 +57,36 @@
         <div class="dairy-Container">
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Ambewela Chocolate Milk.webp" alt="Ambewela Chocolate Milk">
+                <img src="../image/Dairy/Ambewela Chocolate Milk.webp" alt="Ambewela Chocolate Milk">
                 <h2>Ambewela Chocolate Milk</h2>
                 <br>
                 <h3>Rs 580.00</h3>
                 <br>
-                <button onclick="addToFav('Ambewela Chocolate Milk', 580, 'image/Dairy/Ambewela Chocolate Milk.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Ambewela Non Fat Milk.webp" alt="Ambewela Non Fat Milk">
+                <img src="../image/Dairy/Ambewela Non Fat Milk.webp" alt="Ambewela Non Fat Milk">
                 <h2>Ambewela Non Fat Milk</h2>
                 <br>
                 <h3>Rs 550.00</h3>
                 <br>
-                <button onclick="addToFav('Ambewela Non Fat Milk', 550, 'image/Dairy/Ambewela Non Fat Milk.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Kotmale Faluda Flav Milk.webp" alt="Kotmale Faluda Flav Milk">
+                <img src="../image/Dairy/Kotmale Faluda Flav Milk.webp" alt="Kotmale Faluda Flav Milk">
                 <h2>Kotmale Faluda Flav Milk</h2>
                 <br>
                 <h3>Rs 620.00</h3>
                 <br>
-                <button onclick="addToFav('Kotmale Faluda Flav Milk', 620, 'image/Dairy/Kotmale Faluda Flav Milk.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
@@ -97,39 +97,36 @@
         <div class="dairy-Container">
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Happy Cow Cheddar Slices 200g.webp" alt="Happy Cow Cheddar Slices 200g">
+                <img src="../image/Dairy/Happy Cow Cheddar Slices 200g.webp" alt="Happy Cow Cheddar Slices 200g">
                 <h2>H.Cow Slices 200g</h2>
                 <br>
                 <h3>Rs 1,780.00</h3>
                 <br>
-                <button onclick="addToFav('H.Cow Slices 200g', 1780, 'image/Dairy/Happy Cow Cheddar Slices 200g.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Happy cow cheese.webp" alt="Happy cow cheese">
+                <img src="../image/Dairy/Happy cow cheese.webp" alt="Happy cow cheese">
                 <h2>Happy cow cheese</h2>
                 <br>
                 <h3>Rs 1,790.00</h3>
                 <br>
-                <button onclick="addToFav('Happy cow cheese', 1790, 'image/Dairy/Happy cow cheese.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
 
             <div class="dairy-box">
                 <br>
-                <img src="image/Dairy/Kotmale Cheese Spread 175g.webp" alt="Kotmale Cheese Spread 175g">
+                <img src="../image/Dairy/Kotmale Cheese Spread 175g.webp" alt="Kotmale Cheese Spread 175g">
                 <h2>K. Cheese Spread 175g</h2>
                 <br>
                 <h3>Rs 880.00</h3>
                 <br>
-                <button onclick="addToFav('K. Cheese Spread 175g', 880, 'image/Dairy/Kotmale Cheese Spread 175g.webp')">Add to Fav</button>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
@@ -175,7 +172,7 @@
             </div>
         </div>
     </footer>
-  <script src="add-to-cart.js"></script>
+  <script src="../scripts/cart.js"></script>
   </body>
   </html>
   
