--- a/html websites/fruits.html
+++ b/html websites/fruits.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="my website">
-        <title>Fresh Fruit Products</title>
-        <link rel="stylesheet" href="style/Website.css">
-    </head>
-    <body>
-        <div class="fruitpage">
-          <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                    </ul>
-                    <div class="nav-buttons">
-                      <a href="cart1.html" class="button-nav">Cart</a>
-                      <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
+</head>
+
+<body>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
         
 <br>
 <br>
@@ -54,67 +57,61 @@
 
 <div class="fruit-container">
     <div class="fbox">
-        <img src="image/fruits/Apple 1KG.png" alt="Apple 1KG">
+        <img src="../image/fruits/Apple 1KG.png" alt="Apple 1KG">
         <h2>Apple 1KG</h2>
         <h3>Rs 850.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Apple 1KG', 850.00, 'image/fruits/Apple 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="image/fruits/Banana 1KG.png" alt="Banana 1KG">
+        <img src="../image/fruits/Banana 1KG.png" alt="Banana 1KG">
         <h2>Banana 1KG</h2>
         <h3>Rs 305.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Banana 1KG', 305.00, 'image/fruits/Banana 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="image/fruits/Grapes 1KG.png" alt="Grapes 1 KG">
+        <img src="../image/fruits/Grapes 1KG.png" alt="Grapes 1 KG">
         <h2>Grapes 1 KG</h2>
         <h3>Rs 2,300.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Grapes 1 KG', 2300.00, 'image/fruits/Grapes 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="image/fruits/Mango 1KG.png" alt="Mango 1KG">
+        <img src="../image/fruits/Mango 1KG.png" alt="Mango 1KG">
         <h2>Mango 1KG</h2>
         <h3>Rs 545.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Mango 1KG', 545.00, 'image/fruits/Mango 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="image/fruits/Papaya 1KG.png" alt="Papaya 1KG">
+        <img src="../image/fruits/Papaya 1KG.png" alt="Papaya 1KG">
         <h2>Papaya</h2>
         <h3>Rs 234.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Papaya 1KG', 234.00, 'image/fruits/Papaya 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="image/fruits/Avacado 1KG.png" alt="Avacado 1KG">
+        <img src="../html websites/ 1KG.png" alt="Avacado 1KG">
         <h2>Avacado 1KG</h2>
         <h3>Rs 450.00 / KG</h3>
         <br>
-        <button onclick="addToFav('Avacado 1KG', 450.00, 'image/fruits/Avacado 1KG.png')">Add to Fav</button>
-        <a href="cart1.html">
+        <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
@@ -159,6 +156,6 @@
     </div>
 </footer>
 
-<script src="add-to-cart.js"></script>
+<script src="../scripts/cart.js"></script>
 </body>
 </html>
