--- a/html websites/vegetables.html
+++ b/html websites/vegetables.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="my website">
-    <title>Vegetable Products</title>
-    <link rel="stylesheet" href="style/Website.css">
-    <script src="cart.js" defer></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="my website">
+  <title>Home page</title>
+  <link rel="stylesheet" href="../style/Website.css">
 </head>
+
 <body>
-    <div class="vegepage">
-        <header>
-            <nav class="navbar">
-                <div class="navdiv">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="image/GROCIES LOGO.png" alt="logo" class="logo-img">
-                        </a>
-                    </div>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Aboutuspage.html">About</a></li>
-                        <li class="dropdown">
-                            <a class="dropbtn">Products</a>
-                            <div class="dropdown-content">
-                                <a href="dairy.html">Dairy Products</a>
-                                <a href="vegetables.html">Vegetables</a>
-                                <a href="fruits.html">Fresh Fruits</a>
-                                <a href="Meat.html">Meat / Seafood</a>
-                                <a href="Ingredients.html">Ingredients</a>
-                            </div>
-                        </li>
-                        <li><a href="Orderpage.html">Order</a></li>
-                        <li><a href="Loyaltyregistration.html">Loyalty.R</a></li>    
-                    </ul>
-                    <div class="nav-buttons">
-                        <a href="cart1.html" class="button-nav">Cart</a>
-                        <a href="fav.html" class="button-nav">Favorite</a>
-                    </div>
-                </div>
-            </nav>
-        </header>
+  <div id="homepage">
+    <header>
+      <nav class="navbar">
+          <div class="navdiv">
+              <div class="logo">
+                  <a href="index.html">
+                      <img src="../image/GROCIES LOGO.png" alt="logo" class="logo-img">
+                  </a>
+              </div>
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="../html websites/Aboutuspage.html">About</a></li>
+                  <li class="dropdown">
+                      <a class="dropbtn">Products</a>
+                      <div class="dropdown-content">
+                          <a href="../html websites/dairy.html">Dairy Products</a>
+                          <a href="../html websites/vegetables.html">Vegetables</a>
+                          <a href="../html websites/fruits.html">Fresh Fruits</a>
+                          <a href="../html websites/Meat.html">Meat / Seafood</a>
+                          <a href="../html websites/Ingredients.html">Ingredients</a>
+                      </div>
+                  </li>
+                  <li><a href="../html websites/Orderpage.html">Order</a></li>
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+              </ul>
+              <div class="nav-buttons">
+                <a href="../html websites/cart1.html" class="button-nav">Cart</a>
+                <a href="../html websites/fav.html" class="button-nav">Favorite</a>
+            </div>
+          </div>
+      </nav>
+  </header>
+</div>
 
         <main>
             <div class="vege-hero">
@@ -53,17 +55,17 @@
         <div class="vs-container">
             <!-- Supplier boxes -->
             <div class="vsbox" id="vs1">
-                <img src="image/Local Farmer's.jpg" alt="Local Farmer's">
+                <img src="../image/Local Farmer's.jpg" alt="Local Farmer's">
                 <h2>Local Farmers</h2>
                 <p>We source vegetables from local farms and farmers' markets, ensuring freshness and seasonality. This partnership fosters community and supports local agriculture, fostering a sense of community.</p>
             </div>
             <div class="vsbox">
-                <img src="image/vegetable market.webp" alt="Wholesale Market">
+                <img src="../image/vegetable market.webp" alt="Wholesale Market">
                 <h2>Wholesale Produce Markets</h2>
                 <p>Our supermarket offers fresh produce from wholesale markets, ensuring quality and selection of vegetables like lettuce and tomatoes. Experience the freshness firsthand at our store.</p>
             </div>
             <div class="vsbox">
-                <img src="image/supplier.jpeg" alt="Suppliers">
+                <img src="../image/supplier.jpeg" alt="Suppliers">
                 <h2>Vegetable Distributors</h2>
                 <p>Supermarket maintains strong relationships with vegetable suppliers, ensuring quality control, traceability, and competitive pricing through negotiation of delivery schedules and pricing.</p>
             </div>
@@ -72,68 +74,64 @@
         <h1 id="vh2">Vegetables</h1>
         <div class="vege-container">
             <div class="vbox">
-                <img src="image/Vegetables/Celery.webp" alt="Celery">
+                <img src="../image/Vegetables/Celery.webp" alt="Celery">
                 <h2>Celery</h2>
                 <h3>Rs 990.00</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Celery', 990.00, 'image/Vegetables/Celery.webp')">
                     <button>Add to Fav</button>
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="vbox">
-                <img src="image/Vegetables/Cabbage.webp" alt="Cabbage">
+                <img src="../image/Vegetables/Cabbage.webp" alt="Cabbage">
                 <h2>Cabbage</h2>
                 <h3>Rs 144.00 / KG</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Cabbage', 144.00, 'image/Vegetables/Cabbage.webp')">
                     <button>Add to Fav</button>
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="vbox">
-                <img src="image/Vegetables/Pumpkin.webp" alt="Pumpkin">
+                <img src="../image/Vegetables/Pumpkin.webp" alt="Pumpkin">
                 <h2>Pumpkin</h2>
                 <h3>Rs 60.00</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Pumpkin', 60.00, 'image/Vegetables/Pumpkin.webp')">
                     <button>Add to Fav</button>
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="vbox">
-                <img src="image/Vegetables/Tomatoes.webp" alt="Tomatoes">
+                <img src="../image/Vegetables/Tomatoes.webp" alt="Tomatoes">
                 <h2>Tomatoes</h2>
                 <h3>Rs 480.00</h3>
                 <a href="javascript:void(0)" onclick="addToFav('Tomatoes', 480.00, 'image/Vegetables/Tomatoes.webp')">
                     <button>Add to Fav</button>
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="vbox">
-                <img src="image/Vegetables/Green Beans (1).webp" alt="Green Beans">
+                <img src="../image/Vegetables/Green Beans (1).webp" alt="Green Beans">
                 <h2>Green Beans</h2>
                 <h3>Rs 304.00 / KG</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Green Beans', 304.00, 'image/Vegetables/Green Beans (1).webp')">
                     <button>Add to Fav</button>
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
             <div class="vbox">
-                <img src="image/Vegetables/Cauliflower.webp" alt="Cauliflower">
+                <img src="../image/Vegetables/Cauliflower.webp" alt="Cauliflower">
                 <h2>Cauliflower</h2>
                 <h3>Rs 1,100.00</h3>
                 <a href="javascript:void(0)" onclick="addToFav('Cauliflower', 1100.00, 'image/Vegetables/Cauliflower.webp')">
                     <button>Add to Fav</button>    
                 </a>
-                <a href="cart1.html">
+                <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
@@ -168,13 +166,13 @@
                     </div>
                     <div class="footer-section" id="sm">
                         <p>Follow Us on: </p>
-                        <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="image/instagram.png" alt="Instagram Icon"></a>
-                        <a href="https://www.tiktok.com/@your_tiktok_username"><img src="image/tiktok.png" alt="TikTok Icon"></a>
+                        <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="../image/instagram.png" alt="Instagram Icon"></a>
+                        <a href="https://www.tiktok.com/@your_tiktok_username"><img src="../image/tiktok.png" alt="TikTok Icon"></a>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
-    <script src="add-to-cart.js"></script>
+    <script src="../scripts/cart.js"></script>
 </body>
 </html>
