--- a/html websites/Ingredients.html
+++ b/html websites/Ingredients.html
@@ -43,69 +43,74 @@
       </nav>
   </header>
 </div>
+<br><br><br><br><br><br><br><br>
+<h1 id="i2">Ingredients</h1>
+<br>
 
-        <br><br><br><br><br><br><br><br>
-        <h1 id="i2">Ingredients</h1>
+<div class="ing-container">
+    <div class="ibox">
+        <img src="../image/Baking/Baking Powder.png" alt="Baking Powder">
+        <h2>Baking Powder</h2>
+        <h3>Rs 350.00</h3>
         <br>
+        <button onclick="addToFav('Baking Powder', 350.00, '../image/Baking/Baking Powder.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+    <div class="ibox">
+        <img src="../image/Baking/Chilli Powder.png" alt="Chilli Powder">
+        <h2>Chilli Powder</h2>
+        <h3>Rs 260.00</h3>
+        <br>
+        <button onclick="addToFav('Chilli Powder', 260.00, '../image/Baking/Chilli Powder.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+    <div class="ibox">
+        <img src="../image/Baking/Corn Flour.png" alt="Corn Flour">
+        <h2>Corn Flour</h2>
+        <h3>Rs 135.00</h3>
+        <br>
+        <button onclick="addToFav('Corn Flour', 135.00, '../image/Baking/Corn Flour.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+    <div class="ibox">
+        <img src="../image/Baking/Crystal Salt.png" alt="Crystal Salt">
+        <h2>Crystal Salt</h2>
+        <h3>Rs 135.00</h3>
+        <br>
+        <button onclick="addToFav('Crystal Salt', 135.00, '../image/Baking/Crystal Salt.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+    <div class="ibox">
+        <img src="../image/Baking/Essence Vanilla.png" alt="Essence Vanilla">
+        <h2>Essence Vanilla</h2>
+        <h3>Rs 165.00</h3>
+        <br>
+        <button onclick="addToFav('Essence Vanilla', 165.00, '../image/Baking/Essence Vanilla.png')">Add to Fav</button>
+        <a href="../html websites/">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+    <div class="ibox">
+        <img src="../image/Baking/Icing Sugar.png" alt="Icing Sugar">
+        <h2>Icing Sugar</h2>
+        <h3>Rs 240.00</h3>
+        <br>
+        <button onclick="addToFav('Icing Sugar', 240.00, '../image/Baking/Icing Sugar.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+</div>
 
-        <div class="ing-container">
-            <div class="ibox">
-                <img src="../image/Baking/Baking Powder.png" alt="Baking Powder">
-                <h2>Baking Powder</h2>
-                <h3>Rs 350.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-            <div class="ibox">
-                <img src="../image/Baking/Chilli Powder.png" alt="Chilli Powder">
-                <h2>Chilli Powder</h2>
-                <h3>Rs 260.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-            <div class="ibox">
-                <img src="../image/Baking/Corn Flour.png" alt="Corn Flour">
-                <h2>Corn Flour</h2>
-                <h3>Rs 135.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-            <div class="ibox">
-                <img src="../image/Baking/Crystal Salt.png" alt="Crystal Salt">
-                <h2>Crystal Salt</h2>
-                <h3>Rs 135.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-            <div class="ibox">
-                <img src="../image/Baking/Essence Vanilla.png" alt="Essence Vanilla">
-                <h2>Essence Vanilla</h2>
-                <h3>Rs 165.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-            <div class="ibox">
-                <img src="../image/Baking/Icing Sugar.png" alt="Icing Sugar">
-                <h2>Icing Sugar</h2>
-                <h3>Rs 240.00</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-        </div>
-
-        <br><br>
+<br><br>
         <footer>
             <div class="footer-container">
                 <div class="footer">
