--- a/html websites/Meat.html
+++ b/html websites/Meat.html
@@ -43,54 +43,57 @@
       </nav>
   </header>
 </div>
-        
-        <br><br><br><br><br><br><br><br>
-        <h1 id="m2">Meat / Seafood</h1>
+<br><br><br><br><br><br><br><br>
+<h1 id="m2">Meat / Seafood</h1>
+<br>
+
+<div class="meat-container">
+    <div class="mbox">
+        <img src="../image/Meats/skinless chicken 1KG.png" alt="Whole Chicken 1KG" id="wcimg">
+        <h2 id="wc">Whole Chicken 1KG</h2>
+        <h3 id="wcp">Rs 1,380.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Whole Chicken 1KG', 1380.00, '../image/Meats/skinless chicken 1KG.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
 
-        <div class="meat-container">
-            <div class="mbox">
-                <img src="../image/Meats/skinless chicken 1KG.png" alt="Whole Chicken 1KG" id="wcimg">
-                <h2 id="wc">Whole Chicken 1KG</h2>
-                <h3 id="wcp">Rs 1,380.00 / KG</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
+    <div class="mbox">
+        <img src="../image/Meats/Sausages 1KG.png" alt="Sausages 1KG" id="simg">
+        <h2 id="s">Sausages 1KG</h2>
+        <h3 id="sp">Rs 1,100.00 / KG</h3>
+        <br>
+        <button onclick="addToFav('Sausages 1KG', 1100.00, '../image/Meats/Sausages 1KG.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
 
-            <div class="mbox">
-                <img src="../image/Meats/Sausages 1KG.png" alt="Sausages 1KG" id="simg">
-                <h2 id="s">Sausages 1KG</h2>
-                <h3 id="sp">Rs 1,100.00 / KG</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
+    <div class="mbox">
+        <img src="../image/Meats/Prawns 1KG.png" alt="Prawns 1 KG" id="pimg">
+        <h2 id="p">Prawns 1 KG</h2>
+        <h3 id="pp">Rs 1,590.00 / KG</h3>
+        <br>
+        <button onclick="addToFav('Prawns 1 KG', 1590.00, '../image/Meats/Prawns 1KG.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
 
-            <div class="mbox">
-                <img src="../image/Meats/Prawns 1KG.png" alt="Prawns 1 KG" id="pimg">
-                <h2 id="p">Prawns 1 KG</h2>
-                <h3 id="pp">Rs 1,590.00 / KG</h3>
-                <br>
-                <a href="/html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
+    <div class="mbox">
+        <img src="../image/Meats/Fish 1KG.png" alt="Fish 1KG" id="fimg">
+        <h2 id="f">Fish 1KG</h2>
+        <h3 id="fishp">Rs 1,150.00 / KG</h3>
+        <br>
+        <button onclick="addToFav('Fish 1KG', 1150.00, '../image/Meats/Fish 1KG.png')">Add to Fav</button>
+        <a href="../html websites/cart1.html">
+            <button id="cart-btn">Add to cart</button>
+        </a>
+    </div>
+</div>
 
-            <div class="mbox">
-                <img src="../image/Meats/Fish 1KG.png" alt="Fish 1KG" id="fimg">
-                <h2 id="f">Fish 1KG</h2>
-                <h3 id="fishp">Rs 1,150.00 / KG</h3>
-                <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
-            </div>
-        </div>
-
-        <br><br>
+<br><br>
         <footer>
             <div class="footer-container">
                 <div class="footer">
