--- a/html websites/fruits.html
+++ b/html websites/fruits.html
@@ -61,6 +61,7 @@
         <h2>Apple 1KG</h2>
         <h3>Rs 850.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Apple 1KG', 850.00, '../image/fruits/Apple 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
@@ -71,6 +72,7 @@
         <h2>Banana 1KG</h2>
         <h3>Rs 305.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Banana 1KG', 305.00, '../image/fruits/Banana 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
@@ -81,6 +83,7 @@
         <h2>Grapes 1 KG</h2>
         <h3>Rs 2,300.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Grapes 1 KG', 2300.00, '../image/fruits/Grapes 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
@@ -91,6 +94,7 @@
         <h2>Mango 1KG</h2>
         <h3>Rs 545.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Mango 1KG', 545.00, '../image/fruits/Mango 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
@@ -101,16 +105,18 @@
         <h2>Papaya</h2>
         <h3>Rs 234.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Papaya 1KG', 234.00, '../image/fruits/Papaya 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
     </div>
 
     <div class="fbox">
-        <img src="../html websites/ 1KG.png" alt="Avacado 1KG">
+        <img src="../image/fruits/Avacado 1KG.png" alt="Avacado 1KG">
         <h2>Avacado 1KG</h2>
         <h3>Rs 450.00 / KG</h3>
         <br>
+        <button onclick="addToFav('Avacado 1KG', 450.00, '../image/fruits/Avacado 1KG.png')">Add to Fav</button>
         <a href="../html websites/cart1.html">
             <button id="cart-btn">Add to cart</button>
         </a>
@@ -156,6 +162,6 @@
     </div>
 </footer>
 
-<script src="../scripts/cart.js"></script>
+<script src="../scripts/add-to-cart.js"></script>
 </body>
 </html>
