--- a/html websites/vegetables.html
+++ b/html websites/vegetables.html
@@ -77,8 +77,8 @@
                 <img src="../image/Vegetables/Celery.webp" alt="Celery">
                 <h2>Celery</h2>
                 <h3>Rs 990.00</h3>
-                    <button>Add to Fav</button>
-                </a>
+                <br>
+                <button onclick="addToFav('Celery', 990.00, '../image/Vegetables/Celery.webp')">Add to Fav</button>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
@@ -87,8 +87,8 @@
                 <img src="../image/Vegetables/Cabbage.webp" alt="Cabbage">
                 <h2>Cabbage</h2>
                 <h3>Rs 144.00 / KG</h3>
-                    <button>Add to Fav</button>
-                </a>
+                <br>
+                <button onclick="addToFav('Cabbage', 144.00, '../image/Vegetables/Cabbage.webp')">Add to Fav</button>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
@@ -97,7 +97,8 @@
                 <img src="../image/Vegetables/Pumpkin.webp" alt="Pumpkin">
                 <h2>Pumpkin</h2>
                 <h3>Rs 60.00</h3>
-                    <button>Add to Fav</button>
+                <br>
+                <button onclick="addToFav('Pumpkin', 60.00, '../image/Vegetables/Pumpkin.webp')">Add to Fav</button>
                 </a>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
@@ -107,9 +108,8 @@
                 <img src="../image/Vegetables/Tomatoes.webp" alt="Tomatoes">
                 <h2>Tomatoes</h2>
                 <h3>Rs 480.00</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Tomatoes', 480.00, 'image/Vegetables/Tomatoes.webp')">
-                    <button>Add to Fav</button>
-                </a>
+                <br>
+                <button onclick="addToFav('Tomatoes', 480.00, '../image/Vegetables/Tomatoes.webp')">Add to Fav</button>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
@@ -118,8 +118,8 @@
                 <img src="../image/Vegetables/Green Beans (1).webp" alt="Green Beans">
                 <h2>Green Beans</h2>
                 <h3>Rs 304.00 / KG</h3>
-                    <button>Add to Fav</button>
-                </a>
+                <br>
+                <button onclick="addToFav('Green Beans', 304.00, '../image/Vegetables/Green Beans (1).webp')">Add to Fav</button>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
@@ -128,15 +128,13 @@
                 <img src="../image/Vegetables/Cauliflower.webp" alt="Cauliflower">
                 <h2>Cauliflower</h2>
                 <h3>Rs 1,100.00</h3>
-                <a href="javascript:void(0)" onclick="addToFav('Cauliflower', 1100.00, 'image/Vegetables/Cauliflower.webp')">
-                    <button>Add to Fav</button>    
-                </a>
+                <br>
+                <button onclick="addToFav('Cauliflower', 1100.00, '../image/Vegetables/Cauliflower.webp')">Add to Fav</button>
                 <a href="../html websites/cart1.html">
                     <button id="cart-btn">Add to cart</button>
                 </a>
             </div>
         </div>
-
         <footer>
             <div class="footer-container">
                 <div class="footer">
