--- a/html websites/Orderpage.html
+++ b/html websites/Orderpage.html
@@ -44,40 +44,6 @@
   </header>
 </div>
     <br><br><br><br><br><br><br><br><br>
-    <div id="billing-Container">
-        <section id="ba" class="billing">
-            <br>
-            <h1><u>Billing Address</u></h1>
-            <br><br>
-            <form>
-                <label for="fname">First Name (max 30 characters a-z and A-Z):</label><br>
-                <input type="text" name="fname" maxlength="30" required="required"><br><br>
-                <label for="lname">Last Name (max 30 characters a-z and A-Z):</label><br>
-                <input type="text" name="lname" maxlength="30" required="required"><br><br>
-                <label for="address">Address:</label><br>
-                <textarea cols="70" rows="10" name="address"></textarea><br><br>
-                <label for="city">City (max 50 characters a-z and A-Z):</label><br>
-                <input type="text" name="city" required="required" maxlength="50"><br><br>
-                <label for="state">State:</label><br>
-                <textarea cols="70" rows="5" name="address"></textarea><br>
-            </form>
-            <br>
-            <h1><u>Payment Details</u></h1>
-            <br><br>
-            <form>
-                <label for="cname">Name On Card (max 26 characters a-z and A-Z):</label><br>
-                <input type="text" name="cname" maxlength="26" required="required"><br>
-                <label for="ccnumber">Credit Card Number (max 16 digits):</label><br>
-                <input type="password" name="ccnumber" maxlength="16" required="required"><br>
-                <label for="expiry">Expiry:</label><br>
-                <input type="date" name="expiry" required="required"><br>
-                <label for="cvv">Card Verification Value (max 4 digits):</label><br>
-                <input type="text" name="cvv" maxlength="4" required="required"><br><br><br>
-                <input type="submit" name="submit">
-            </form>
-        </section>
-    </div>
-    <h1 id="vh1">Cart Table</h1>
     <table id="order-table">
         <thead>
             <tr>
@@ -87,9 +53,7 @@
                 <th>Total Price</th>
             </tr>
         </thead>
-        <tbody id="order-table-body">
-            <!-- Cart items will be dynamically added here -->
-        </tbody>
+        <tbody id="order-table-body"></tbody>
         <tfoot>
             <tr>
                 <td colspan="3">Total Price</td>
@@ -97,9 +61,55 @@
             </tr>
         </tfoot>
     </table>
-    <br><br>
-    <footer>
-    <br><br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div id="billing-Container">
+        <section id="ba" class="billing-container">
+            <table class="billing-table">
+                <thead>
+                    <tr>
+                        <th colspan="2">Billing Address</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2">
+                            <form id="order-form">
+                                <label for="fname">First Name (max 30 characters a-z and A-Z):</label><br>
+                                <input type="text" id="fname" name="fname" maxlength="30" required="required"><br><br>
+                                <label for="lname">Last Name (max 30 characters a-z and A-Z):</label><br>
+                                <input type="text" id="lname" name="lname" maxlength="30" required="required"><br><br>
+                                <label for="address">Address:</label><br>
+                                <textarea id="address" name="address" cols="70" rows="10"></textarea><br><br>
+                                <label for="city">City (max 50 characters a-z and A-Z):</label><br>
+                                <input type="text" id="city" name="city" maxlength="50" required="required"><br><br>
+                                <label for="state">State:</label><br>
+                                <textarea id="state" name="state" cols="70" rows="5"></textarea><br>
+                                <br><br>
+                                <label for="cname">Name On Card (max 26 characters a-z and A-Z):</label><br>
+                                <input type="text" id="cname" name="cname" maxlength="26" required="required"><br>
+                                <label for="ccnumber">Credit Card Number (max 16 digits):</label><br>
+                                <input type="password" id="ccnumber" name="ccnumber" maxlength="16" required="required"><br>
+                                <label for="expiry">Expiry:</label><br>
+                                <input type="date" id="expiry" name="expiry" required="required"><br>
+                                <label for="cvv">Card Verification Value (max 4 digits):</label><br>
+                                <input type="text" id="cvv" name="cvv" maxlength="4" required="required"><br><br><br>
+                                <input type="submit" class="submit-btn" value="Submit">
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
     <footer>
         <div class="footer-container">
             <div class="footer">
@@ -135,6 +145,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="../scripts/order.js"></script>
 </body>
 </html>
