--- a/html websites/dairy.html
+++ b/html websites/dairy.html
@@ -62,9 +62,8 @@
                 <br>
                 <h3>Rs 580.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('Ambewela Chocolate Milk', 580, '../image/Dairy/Ambewela Chocolate Milk.webp')">Add to Fav</button>
+                <button onclick="addToCart('Ambewela Chocolate Milk', 580, '../image/Dairy/Ambewela Chocolate Milk.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -74,9 +73,8 @@
                 <br>
                 <h3>Rs 550.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('Ambewela Non Fat Milk', 550, '../image/Dairy/Ambewela Non Fat Milk.webp')">Add to Fav</button>
+                <button onclick="addToCart('Ambewela Non Fat Milk', 550, '../image/Dairy/Ambewela Non Fat Milk.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -86,9 +84,8 @@
                 <br>
                 <h3>Rs 620.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('Kotmale Faluda Flav Milk', 620, '../image/Dairy/Kotmale Faluda Flav Milk.webp')">Add to Fav</button>
+                <button onclick="addToCart('Kotmale Faluda Flav Milk', 620, '../image/Dairy/Kotmale Faluda Flav Milk.webp', 1)">Add to cart</button>
             </div>
         </div>
         <br>
@@ -102,9 +99,8 @@
                 <br>
                 <h3>Rs 1,780.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('H.Cow Slices 200g', 1780, '../image/Dairy/Happy Cow Cheddar Slices 200g.webp')">Add to Fav</button>
+                <button onclick="addToCart('H.Cow Slices 200g', 1780, '../image/Dairy/Happy Cow Cheddar Slices 200g.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -114,9 +110,8 @@
                 <br>
                 <h3>Rs 1,790.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('Happy cow cheese', 1790, '../image/Dairy/Happy cow cheese.webp')">Add to Fav</button>
+                <button onclick="addToCart('Happy cow cheese', 1790, '../image/Dairy/Happy cow cheese.webp', 1)">Add to cart</button>
             </div>
 
             <div class="dairy-box">
@@ -126,16 +121,13 @@
                 <br>
                 <h3>Rs 880.00</h3>
                 <br>
-                <a href="../html websites/cart1.html">
-                    <button id="cart-btn">Add to cart</button>
-                </a>
+                <button onclick="addToFav('K. Cheese Spread 175g', 880, '../image/Dairy/Kotmale Cheese Spread 175g.webp')">Add to Fav</button>
+                <button onclick="addToCart('K. Cheese Spread 175g', 880, '../image/Dairy/Kotmale Cheese Spread 175g.webp', 1)">Add to cart</button>
             </div>
         </div>
         <br>
     </div>
 
-    <br>
-    <br>
     <footer>
         <div class="footer-container">
             <div class="footer">
@@ -172,8 +164,7 @@
             </div>
         </div>
     </footer>
-  <script src="../scripts/cart.js"></script>
-  </body>
-  </html>
-  
-  
+    <script src="../html websites/dairy.html"></script>
+</body>
+</html>
+
