Order and Cart Responsive

--- a/html websites/Orderpage.html
+++ b/html websites/Orderpage.html
@@ -33,7 +33,7 @@
                       </div>
                   </li>
                   <li><a href="../html websites/Orderpage.html">Order</a></li>
-                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyal.R</a></li>    
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
@@ -43,7 +43,7 @@
       </nav>
   </header>
 </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <table id="order-table">
         <thead>
             <tr>
