--- a/html websites/cart1.html
+++ b/html websites/cart1.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="my website">
-  <title>Home page</title>
+  <title>Cart Page</title>
   <link rel="stylesheet" href="../style/Website.css">
 </head>
 
 <body>
-  <div id="homepage">
+  <div id="cartpage">
     <header>
       <nav class="navbar">
           <div class="navdiv">
@@ -33,7 +33,7 @@
                       </div>
                   </li>
                   <li><a href="../html websites/Orderpage.html">Order</a></li>
-                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyal.R</a></li>    
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
@@ -48,16 +48,16 @@
 <br><br><br>
 <br><br><br>
  
-    <h1 id="vh1">Cart</h1>
+    <h1 id="car1">Cart</h1>
     <table id="cart-table">
         <thead>
             <tr>
                 <th>Product</th>
                 <th>Price</th>
                 <th>Image</th>
-                <th>Quantity</th>
-                <th>Total Price</th>
-                <th>Remove</th>
+                <th>Qty</th>
+                <th>Tot. Price</th>
+                <th>Del</th>
             </tr>
         </thead>
         <tbody id="cart-table-body">
@@ -70,6 +70,7 @@
             </tr>
         </tfoot>
     </table>
+    <br>
     <div class="button-container">
         <a href="../html websites/Orderpage.html">
             <button id="buy_now">Pay Now</button>
@@ -78,7 +79,12 @@
         <button id="save-order">Save order</button>
     </div>
 
-    
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <h1 id="ch2">Add To Cart</h1>
     <div class="cart-container">
