--- a/html websites/fruits.html
+++ b/html websites/fruits.html
@@ -33,7 +33,7 @@
                       </div>
                   </li>
                   <li><a href="../html websites/Orderpage.html">Order</a></li>
-                  <li><a href="../html websites/Loyaltyregistration.html">Loyalty.R</a></li>    
+                  <li><a href="../html websites/Loyaltyregistration.html">Loyal.R</a></li>    
               </ul>
               <div class="nav-buttons">
                 <a href="../html websites/cart1.html" class="button-nav">Cart</a>
